--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
+    ".": "./src/index.ts",
     "./*": "./src/*"
   },
   "files": [
@@ -18,6 +19,7 @@
     "ignore": "^7.0.5",
     "istextorbinary": "^9.5.0",
     "minimatch": "^10.0.3",
+    "ts-brand": "^0.2.0",
     "yaml": "^2.8.1"
   },
   "devDependencies": {
