--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@opencheck/lib": "workspace:*",
+    "chalk": "^5.6.2",
     "ignore": "^7.0.5",
     "minimatch": "^10.0.3"
   },
