--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,8 @@
     "@opencheck/lib": "workspace:*",
     "chalk": "^5.6.2",
     "ignore": "^7.0.5",
-    "minimatch": "^10.0.3"
+    "minimatch": "^10.0.3",
+    "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "@types/node": "^24.5.1",
