--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -19,6 +19,7 @@
     "ignore": "^7.0.5",
     "istextorbinary": "^9.5.0",
     "minimatch": "^10.0.3",
+    "simple-git": "^3.28.0",
     "ts-brand": "^0.2.0",
     "vfile-message": "^4.0.3",
     "yaml": "^2.8.1"
