--- a/packages/plugin-openspec/package.json
+++ b/packages/plugin-openspec/package.json
@@ -22,6 +22,7 @@
     "remark-message-control": "^8.0.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
+    "simple-git": "^3.28.0",
     "unified": "^11.0.5",
     "unified-lint-rule": "^3.0.1",
     "unist-util-is": "^6.0.1",
