--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,10 @@
     "prepack": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
+    "@google/genai": "^1.26.0",
     "@opencheck/lib": "workspace:*",
+    "arktype": "^2.1.23",
+    "ts-brand": "^0.2.0",
     "chalk": "^5.6.2",
     "execa": "^9.6.0",
     "ignore": "^7.0.5",
