--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -15,6 +15,8 @@
     "prepack": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
+    "@ark/schema": "^0.51.0",
+    "arktype": "^2.1.23",
     "execa": "^9.6.0",
     "ignore": "^7.0.5",
     "istextorbinary": "^9.5.0",
