--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "incremental": false,
-    "target": "ES2022",
+    "target": "esnext",
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "customConditions": ["node"],
