--- a/packages/plugin-openspec/package.json
+++ b/packages/plugin-openspec/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@opencheck/lib": "workspace:*",
+    "arktype": "^2.1.23",
     "iter-ops": "^3.5.0",
     "mdast-util-to-markdown": "^2.1.2",
     "remark-gfm": "^4.0.1",
